fix(ui): metadata alignment

--- a/assets/scss/_post-preview.scss
+++ b/assets/scss/_post-preview.scss
@@ -62,7 +62,7 @@
         }
     }
 
-    .post-posted-date::after {
+    div:has(> .post-posted-date)::after {
         content: "|";
         margin: 0 0.5rem;
         font-size: 1rem;
