--- a/assets/scss/_posts.scss
+++ b/assets/scss/_posts.scss
@@ -49,8 +49,8 @@
                 display: none;
             }
 
-            .post-posted-date::after,
-            .post-updated-date::after {
+            div:has(> .post-posted-date)::after,
+            div:has(> .post-updated-date)::after {
                 content: "|";
                 margin: 0 0.5rem;
                 font-size: 1rem;
